<resources>
    <string name="app_name">Task 20</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_name">first name</string>
    <string name="last_name">last name</string>
    <string name="age">age</string>
    <string name="email">email</string>
    <string name="success">Success</string>
    <string name="error">Error</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="update">Update</string>
    <string name="user_added">User added successfully!</string>
    <string name="user_exists">User already exists!</string>
    <string name="user_deleted">User deleted successfully!</string>
    <string name="user_does_not_exist">User does not exists!</string>
    <string name="user_updated">User updated!</string>
    <string name="fields_are_not_valid">Fields are not valid!</string>
    <string name="count">Count:</string>
    <string name="zero">0</string>
</resources>